# RendererAPI

./: .gitignore  CMakeLists.txt  D3D12Project.sln  D3D12Project_Ex.sln  README.md  Test.sln  scripts.cmake
BlueprintEditor/: BlueprintEditor.vcxproj  BlueprintEditor.vcxproj.filters  Profiler.cpp  Profiler.h  imgui.ini  main_bp.cpp  main_bp_editor.cpp
BlueprintEditor/Blueprints/: concreate.bp  concrete.bp  floor.bp  map.bp  sandbag.bp  tent.bp  tree.bp
D3D12Engine/: BoundingVolume.cpp  BoundingVolume.hpp  Camera.cpp  Camera.hpp  D3D12DescriptorHeapManager.hpp  D3D12Engine.vcxproj  D3D12Engine.vcxproj.filters  GameObject.h  Material.cpp  Material.hpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  ParticleSystem.cpp  RenderAPI.cpp  RenderAPI.hpp  RenderState.cpp  RenderState.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  ShaderManager.cpp  ShaderManager.hpp  Technique.cpp  Terrain.hpp  Texture.hpp  Window.cpp  Window.hpp  WindowInput.cpp  WindowInput.hpp  stdafx.h
D3D12Engine/D3D12/: D3D12API.cpp  D3D12API.hpp  D3D12Camera.cpp  D3D12Camera.hpp  D3D12Material.cpp  D3D12Material.hpp  D3D12Mesh.cpp  D3D12Mesh.hpp  D3D12ParticleSystem.cpp  D3D12ParticleSystem.hpp  D3D12RenderState.cpp  D3D12Renderer.cpp  D3D12Renderer.hpp  D3D12ShaderManager.cpp  D3D12ShaderManager.hpp  D3D12Technique.cpp  D3D12Technique.hpp  D3D12Terrain.cpp  D3D12Terrain.hpp  D3D12Texture.cpp  D3D12Texture.hpp  D3D12TextureLoader.cpp  D3D12TextureLoader.hpp  D3D12VertexBuffer.cpp  D3D12VertexBuffer.hpp  D3D12VertexBufferLoader.cpp  D3D12VertexBufferLoader.hpp  D3D12Window.cpp  D3D12Window.hpp  D3D12_FDecl.h  FXAAPass.cpp  FullScreenPass.cpp  FullScreenPass.hpp  GlobalSettings.hpp
D3D12Engine/Light/: LightSource.cpp  LightSource.h
Demo-Features/: Demo-Features.vcxproj  Main.cpp
Demo-Game/: Demo-Game.vcxproj  Demo-Game.vcxproj.filters  Editor.cpp  Editor.h  EditorGui.cpp  EditorGui.h  Game.cpp  Game.h  GameObject.h  Main.cpp  imgui.ini
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp  Editor.h  Game.cpp  Game.h  Main.cpp  imgui.ini
FusionReactor/: CMakeLists.txt
FusionReactor/src/: Camera.cpp  Camera.hpp  D3D12DescriptorHeapManager.cpp  GameObject.h  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderAPI.hpp  RenderScene.cpp  RenderScene.h  RenderState.cpp  RenderState.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.hpp  Technique.cpp  Technique.hpp  Terrain.cpp  Terrain.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  WindowInput.cpp  WindowInput.hpp
FusionReactor/src/Light/: LightSource.cpp  LightSource.h
FusionReactor/src/Loaders/: BinaryFile.cpp  ConfigFileLoader.cpp  ConfigFileLoader.hpp  OBJ_Loader.cpp  SimpleTexture.cpp  SimpleTexture.h
FusionReactor/src/Utills/: CodeParser.cpp  CodeParser.h  FileSystem.cpp  FileSystem.h  LinkedList.h  Math.hpp  MemoryBlockTracker.cpp  MemoryBlockTracker.h  MemoryManagerRAM.h  RegularExpressions.cpp  RegularExpressions.h
FusionReactor_DX12/: CMakeLists.txt  D3D12API.hpp  D3D12Camera.hpp  D3D12Material.hpp  D3D12Mesh.cpp  D3D12Mesh.hpp  D3D12ParticleSystem.hpp  D3D12RenderState.hpp  D3D12ShaderManager.cpp  D3D12ShaderManager.hpp  D3D12Technique.hpp  D3D12Terrain.hpp  D3D12Texture.cpp  D3D12Texture.hpp  D3D12TextureLoader.cpp  D3D12Window.cpp  D3D12Window.hpp  FXAAPass.cpp  FXAAPass.hpp  FullScreenPass.cpp  FullScreenPass.hpp  FusionReactor_DX12.vcxproj  FusionReactor_DX12.vcxproj.filters  stdafx.h
ImageChannelExtracter/: ImageChannelExtracter.vcxproj  Source.cpp
OBJ_Cutter/: OBJ_Cutter.vcxproj  Source.cpp
PIX/: Master_BackToFrontObject_4d89b3fa2db645acef1ae14e70610faad310dc97.wpix
PlotData/: SamplesInfo.txt
ShaderCompiler_Debug/: ShaderCompiler_Debug.vcxproj  main.cpp
ShaderParser/: ShaderParser.vcxproj  Source.cpp
Shaders/: Shaders.vcxproj
Test/: Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderState.cpp  RenderState.hpp  Renderer.cpp  Renderer.hpp  Script.gp  ShaderManager.cpp  ShaderManager.hpp  Source.cpp  Technique.cpp  Technique.hpp  Terrain.cpp  Terrain.hpp  Test.vcxproj  Test.vcxproj.filters  Texture.cpp  Texture.hpp  TimeStamps0.tsv  TimeStamps1.tsv  TimeStamps2.tsv  TimeStampsCPU0.tsv  TimeStampsCPU1.tsv  TimeStampsCPU2.tsv  TimeStampsCPU3.tsv  TimeStampsCPU4.tsv  TimeStampsCPU5.tsv  TimeStampsCPU6.tsv  TimeStampsCPU7.tsv  TimeStampsCPU8.tsv  Window.cpp  Window.hpp  WindowInput.cpp  (+1 more)
(+757 files in other folders)
